[gd_scene load_steps=3 format=3 uid="uid://q7e3pgplmvtp"]

[ext_resource type="Script" uid="uid://db2kkvm6ck23h" path="res://scripts/PauseMenu.gd" id="1_jvnd5"]
[ext_resource type="FontFile" uid="uid://d1qhgw51bhm0g" path="res://assets/fonts/Kenney Future Narrow.ttf" id="2_g4jo0"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvnd5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -105.5
offset_right = 134.0
offset_bottom = 1094.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="BtnContinuar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g4jo0")
theme_override_font_sizes/font_size = 32
text = "Continuar"

[node name="BtnCarregar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g4jo0")
theme_override_font_sizes/font_size = 32
text = "Carregar Jogo"

[node name="BtnTitulo" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g4jo0")
theme_override_font_sizes/font_size = 32
text = "Retornar à Tela de Título"

[node name="BtnSair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g4jo0")
theme_override_font_sizes/font_size = 32
text = "Sair do jogo"

[connection signal="pressed" from="VBoxContainer/BtnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCarregar" to="." method="_on_btn_carregar_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnTitulo" to="." method="_on_btn_titulo_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnSair" to="." method="_on_btn_sair_pressed"]
